--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "promise": "^7.1.1",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
+    "immutable": "^3.8.1",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "react-router": "^3.0.0",
+    "redux-actions": "^0.10.1",
     "redbox-react": "^1.3.6",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
